added config cors to existing jwt config